<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2014 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Asanti keypad</string>
    <string name="keyboard_layouts_label">Photon Q keypad</string>
    <!-- WARNING: The translation MUST always start with 'Asanti v1' -->
    <string name="keypad_asanti_qwerty_label">Asanti v1 western/German QWERTY</string>
    <!-- WARNING: The translation MUST always start with 'Asanti v1' -->
    <string name="keypad_asanti_qwertz_label">Asanti v1 western/German QWERTZ</string>
    <!-- WARNING: The translation MUST always start with 'Asanti v1' -->
    <string name="keypad_asanti_czech_qwerty_label">Asanti v1 Czech QWERTY</string>
    <!-- WARNING: The translation MUST always start with 'Asanti v1' -->
    <string name="keypad_asanti_czech_qwertz_label">Asanti v1 Czech QWERTZ</string>
    <!-- WARNING: The translation MUST always start with 'Asanti v1' -->
    <string name="keypad_asanti_cro_qwerty_label">Asanti v1 Croatian QWERTY</string>
    <!-- WARNING: The translation MUST always start with 'Asanti v1' -->
    <string name="keypad_asanti_cro_qwertz_label">Asanti v1 Croatian QWERTZ</string>
    <!-- WARNING: The translation MUST always start with 'Asanti v1' -->
    <string name="keypad_asanti_polish_qwerty_label">Asanti v1 Polish QWERTY</string>
    <!-- WARNING: The translation MUST always start with 'Asanti v1' -->
    <string name="keypad_asanti_polish_qwertz_label">Asanti v1 Polish QWERTZ</string>
    <!-- WARNING: The translation MUST always start with 'Asanti v2' -->
    <string name="keypad_asanti_capsshift_qwerty_label">Asanti v2 western/German QWERTY</string>
    <!-- WARNING: The translation MUST always start with 'Asanti v2' -->
    <string name="keypad_asanti_capsshift_qwertz_label">Asanti v2 western/German QWERTZ</string>
    <!-- WARNING: The translation MUST always start with 'Asanti v2' -->
    <string name="keypad_asanti_capsshift_czech_qwerty_label">Asanti v2 Czech QWERTY</string>
    <!-- WARNING: The translation MUST always start with 'Asanti v2' -->
    <string name="keypad_asanti_capsshift_czech_qwertz_label">Asanti v2 Czech QWERTZ</string>
    <!-- WARNING: The translation MUST always start with 'Asanti v2' -->
    <string name="keypad_asanti_capsshift_cro_qwerty_label">Asanti v2 Croatian QWERTY</string>
    <!-- WARNING: The translation MUST always start with 'Asanti v2' -->
    <string name="keypad_asanti_capsshift_cro_qwertz_label">Asanti v2 Croatian QWERTZ</string>
    <!-- WARNING: The translation MUST always start with 'Asanti v2' -->
    <string name="keypad_asanti_capsshift_polish_qwerty_label">Asanti v2 Polish QWERTY</string>
    <!-- WARNING: The translation MUST always start with 'Asanti v2' -->
    <string name="keypad_asanti_capsshift_polish_qwertz_label">Asanti v2 Polish QWERTZ</string>
    <!-- WARNING: The translation MUST always start with 'Asanti v2' -->
    <string name="keypad_asanti_capsshift_korean_qwerty_label">Asanti v2 Korean QWERTY</string>
</resources>
