<?xml version="1.0" encoding="utf-8"?>
<keyboard-layouts xmlns:android="http://schemas.android.com/apk/res/android">
    <keyboard-layout android:name="keypad_asanti_qwerty"
            android:label="@string/keypad_asanti_qwerty_label"
            android:keyboardLayout="@raw/keypad_asanti_qwerty" />

    <keyboard-layout android:name="keypad_asanti_qwertz"
            android:label="@string/keypad_asanti_qwertz_label"
            android:keyboardLayout="@raw/keypad_asanti_qwertz" />

    <keyboard-layout android:name="keypad_asanti_czech_qwerty"
            android:label="@string/keypad_asanti_czech_qwerty_label"
            android:keyboardLayout="@raw/keypad_asanti_czech_qwerty" />

    <keyboard-layout android:name="keypad_asanti_czech_qwertz"
            android:label="@string/keypad_asanti_czech_qwertz_label"
            android:keyboardLayout="@raw/keypad_asanti_czech_qwertz" />

    <keyboard-layout android:name="keypad_asanti_cro_qwerty"
            android:label="@string/keypad_asanti_cro_qwerty_label"
            android:keyboardLayout="@raw/keypad_asanti_cro_qwerty" />

    <keyboard-layout android:name="keypad_asanti_cro_qwertz"
            android:label="@string/keypad_asanti_cro_qwertz_label"
            android:keyboardLayout="@raw/keypad_asanti_cro_qwertz" />
    
    <keyboard-layout android:name="keyboard_nnmrz_layout_russian"
            android:label="@string/keyboard_nnmrz_layout_russian"
            android:keyboardLayout="@raw/keyboard_nnmrz_layout_russian" />
    
    <keyboard-layout android:name="keyboard_nnmrz_layout_belorussian"
            android:label="@string/keyboard_nnmrz_layout_belorussian"
            android:keyboardLayout="@raw/keyboard_nnmrz_layout_belorussian" />
</keyboard-layouts>
